[package]
name = "expand_str"
version = "0.1.0"
authors = ["TechPriest <yaminogakusei@gmail.com>"]
edition = "2018"
repository = "https://github.com/TechPriest/expand_str.git"
license = "WTFPL"
keywords = ["string", "formatting", "ExpandEnvironmentStrings"]
description = "ExpandEnvironmentStrings-like function and string formatting utility"
readme = "README.md"

[features]
default = ["env"]
env = []

[dependencies]
